p2/manifests/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  namespace: webapps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
  namespace: webapps
spec:
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
