p2/manifests/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-three-service
  namespace: webapps
spec:
  selector:
    app: app-three
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
